[gd_scene load_steps=8 format=2]

[ext_resource path="res://Celular/celular.png" type="Texture" id=1]
[ext_resource path="res://img/Fundo-Celular.png" type="Texture" id=2]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/celular.gd" type="Script" id=4]
[ext_resource path="res://img/Text-Box-Black-INVEST.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 44
outline_size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[node name="celular" type="Node2D"]
script = ExtResource( 4 )

[node name="Fundo-Celular" type="Sprite" parent="."]
position = Vector2( 306.5, 177 )
scale = Vector2( 0.385937, 0.392593 )
texture = ExtResource( 2 )

[node name="Celular" type="Sprite" parent="."]
position = Vector2( 275, 240 )
scale = Vector2( 0.507697, 0.507697 )
texture = ExtResource( 1 )

[node name="investir" type="Button" parent="Celular"]
margin_left = -65.0
margin_top = -268.0
margin_right = 33.0
margin_bottom = -173.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mapa" type="Button" parent="Celular"]
margin_left = 108.0
margin_top = -268.0
margin_right = 213.0
margin_bottom = -171.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair" type="Button" parent="Celular"]
margin_left = 41.0
margin_top = 108.0
margin_right = 100.0
margin_bottom = 169.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="\?\?\?\?" type="Button" parent="Celular"]
margin_left = 112.0
margin_top = -120.0
margin_right = 209.0
margin_bottom = -22.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="Button" parent="Celular"]
margin_left = -65.0
margin_top = -124.0
margin_right = 32.0
margin_bottom = -18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Celular/email"]
margin_left = 84.6968
margin_top = -21.7562
margin_right = 112.697
margin_bottom = 43.2438
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invesitrbloqueado" type="Sprite" parent="."]
position = Vector2( 399.875, 157.375 )
scale = Vector2( 2.06313, 0.863793 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="invesitrbloqueado"]
margin_left = -45.0
margin_top = -67.0
margin_right = 49.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Celular/investir" to="." method="_on_investir_pressed"]
[connection signal="pressed" from="Celular/mapa" to="." method="_on_mapa_pressed"]
[connection signal="pressed" from="Celular/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Celular/email" to="." method="_on_email_pressed"]
